# qtm_control

./: .gitignore  CMakeLists.txt  README.md  configure_build_install_linux.sh  configure_build_windows.bat
qtmc/: CMakeLists.txt
qtmc/src/: main.cpp
